--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mustache-express": "^1.3.2",
     "passport": "^0.5.2",
     "passport-oauth2": "^1.6.1",
+    "querystring": "^0.2.1",
+    "simple-oauth2": "^4.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
