--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "passport-oauth2": "^1.6.1",
     "querystring": "^0.2.1",
     "simple-oauth2": "^4.3.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "@ig3/eslint-config-entrain": "^2.0.5",
