--- a/package.json
+++ b/package.json
@@ -28,8 +28,12 @@
   },
   "devDependencies": {
     "@ig3/eslint-config-entrain": "^2.0.5",
+    "axios": "^0.26.1",
     "c8": "^7.11.0",
-    "multi-tape": "^1.6.1"
+    "debug": "^4.3.4",
+    "multi-tape": "^1.6.1",
+    "supertest": "^6.2.2",
+    "tape": "^5.5.3"
   },
   "eslintConfig": {
     "extends": "@ig3/eslint-config-entrain"
