--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ig3/nginx-auth-request-azuread",
-  "version": "0.0.11",
+  "version": "1.0.0",
   "description": "Server for nginx auth_request authentication subrequests",
   "main": "./naraad.js",
   "bin": {
@@ -28,12 +28,8 @@
   },
   "devDependencies": {
     "@ig3/eslint-config-entrain": "^2.0.5",
-    "axios": "^0.26.1",
     "c8": "^7.11.0",
-    "debug": "^4.3.4",
-    "multi-tape": "^1.6.1",
-    "supertest": "^6.2.2",
-    "tape": "^5.5.3"
+    "multi-tape": "^1.6.1"
   },
   "eslintConfig": {
     "extends": "@ig3/eslint-config-entrain"
