--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   },
   "devDependencies": {
     "@ig3/eslint-config-entrain": "^2.0.5",
+    "axios": "^1.3.5",
     "c8": "^7.11.0",
-    "multi-tape": "^1.6.1"
+    "multi-tape": "^1.6.1",
+    "tape": "^5.6.3"
   },
   "eslintConfig": {
     "extends": "@ig3/eslint-config-entrain"
