--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
   },
   "devDependencies": {
     "@ig3/eslint-config-entrain": "^2.0.5",
+    "@ig3/test": "^0.0.8",
     "axios": "^1.3.5",
     "c8": "^7.11.0",
-    "multi-tape": "^1.6.1",
-    "tape": "^5.6.3"
+    "multi-tape": "^1.6.1"
   },
   "eslintConfig": {
     "extends": "@ig3/eslint-config-entrain"
